--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -25,8 +25,14 @@
         <a class="nav-link" href={{ path('ajoutUser') }}>Ajout Users</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="#">About</a>
+        <a class="nav-link" href={{ path('articleslist') }}>Articles</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link" href={{ path('ajoutArticle') }}>Ajout articles</a>
+      </li>
+       
+  
+      
     </ul>
     <form class="form-inline my-2 my-lg-0">
       <input class="form-control mr-sm-2" type="text" placeholder="Search">
