--- a/templates/articles/listArticles.html.twig
+++ b/templates/articles/listArticles.html.twig
@@ -2,32 +2,38 @@
 
 
 {% block body %}
-    <h1> list article</h1>
+    <h1>{% trans %}liste des articles{% endtrans %}</h1>
    
     <table class="table table-hover">
   <thead>
   <tr>
-       <th>Titre</th>
-       <th>Contenu</th>
-       <th>date de creation</th>
-       <th>nom de l auteur</th>
-       <th>Afficher un article</th>
-       <th>modification article</th>
-        <th>suppression article</th>
+     <th>{% trans %} Titre {% endtrans %}</th>
+     <th>{% trans %} Contenu {% endtrans %}</th>
+     <th>{% trans %} date de creation {% endtrans %}</th>
+     <th>{% trans %}  nom de l auteur {% endtrans %}</th>
+     <th>{% trans %}  Afficher un article {% endtrans %}</th>
+      <th>{% trans %} modification article {% endtrans %}</th>
+     <th>{% trans %} suppression article {% endtrans %}</th>
       
    </tr>
    {% for article in allarticles %}
-     
-   <tr>
+   
+   
+      
+
+    <tr>
        <td>{{ article.title }}</td>
        <td>{{ article.content }}</td>
        <td>{{ article.dateCreation|date('Y-m-d')}}</td>
        <td>{{ article.userId.name }}</td>
+     
        <td><a href= {{ path('articlesdetails', {'id':article.id}) }}>afficher detail article</a></td>
        <td><a href= {{ path('updateArticle', {'id':article.id}) }}>Modifier article</a></td>
        <td><a href= {{ path('deleteArticle', {'id':article.id}) }}>supprimer un article</a></td>
+      
        
    </tr>
+
  {% endfor %}
  
 </table>
