--- a/templates/users/listUsers.html.twig
+++ b/templates/users/listUsers.html.twig
@@ -2,9 +2,12 @@
 
 
 {% block body %}
-    <h1> list user </h1>
-   
-    <table class="table table-hover">
+  <h1>{% trans %}Liste des Utilisateurs{% endtrans %}</h1>
+  {% set count = allUser | length %}
+  
+
+  {% trans %}Il y a %count% utilisateurs{% endtrans %}
+  <table class="table table-hover">
   <thead>
     <tr>
       <th scope="col">Name</th>
@@ -20,7 +23,7 @@
       <th scope="row">Prenom</th>
         {% for user in allUser %}
 
-      <th scope="col">{{ user.lastName }}</th>
+      <th scope="col">{{ user.lastname }}</th>
       
       {% endfor %}
      
@@ -33,14 +36,7 @@
       {% endfor %}
      
     </tr>
-    <tr class="table-primary">
-      <th scope="row">Password</th>
-      {% for user in allUser %}
-
-      <th scope="col">{{ user.password }}</th>
-      {% endfor %}
-     
-    </tr>
+    
     <tr class="table-secondary">
       <th scope="row">date de creation</th>
      {% for user in allUser %}
@@ -76,8 +72,9 @@
        {% for user in allUser %}
       <td><a href= {{ path('deleteUser', {'id':user.id}) }}>effacer un utilisateur</a></td>
       {% endfor %}
-      
     </tr>
+ 
+   
    
   </tbody>
 </table> 
